<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="50"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_jugar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_jugar"
            android:onClick="clickJugar"></Button>

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_perfil"></Button>

        <Button
            android:id="@+id/btn_config"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_ajustes"></Button>

        <Button
            android:id="@+id/btn_acercade"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_acerca_de"></Button>

    </LinearLayout>

    </LinearLayout>


</LinearLayout>